...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.search.SearchFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="265dp"
            android:layout_height="53dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
...
            app:layout_constraintEnd_toStartOf="@+id/filterButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movies_series_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
