...
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/searchCardView"
            android:layout_width="@dimen/width_card_dashboard"
            android:layout_height="@dimen/height_card_dashboard"
            android:layout_margin="8dp"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="@dimen/matCardRadius"
            app:cardElevation="@dimen/cardElevation"
...
